--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "workbox-cli": "^6.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
