--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,17 +3,17 @@
   "name": "Check your Manchester bin days",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "BinLogo.PNG",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "BinLogo192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "BinLogo512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
