--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Check your Manchester bin days",
   "icons": [
     {
-      "src": "BinLogo.PNG",
+      "src": "favicon.PNG",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
