--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,7 +10,8 @@
     {
       "src": "BinLogo192.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "purpose": "any maskable"
     },
     {
       "src": "BinLogo512.png",
